refacto: renommage des fichiers pour github soit content

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
         
         <footer class="footer">
-            <img class="imgfooter" src="Capture d’écran 2021-12-16 à 10.58.48.png" width="40" height="40"/>
-            <img class="imgfooter2" src="Capture d’écran 2021-12-16 à 10.58.18.png" width="40" height="40"/>
-            <img class="imgfooter3" src="Capture d’écran 2021-12-16 à 14.44.59.png" width="80" height="80"/>
+            <img class="imgfooter" src="mail.png" width="40" height="40"/>
+            <img class="imgfooter2" src="phone.png" width="40" height="40"/>
+            <img class="imgfooter3" src="position.png" width="80" height="80"/>
             <p class="numtel"> <a href="tel:0781786728" class="tel">07.81.78.67.28</a></p> 
             <a class="mail" href="mailto:mathis.lescure@gmail.com">mathis.lescure@gmail.com</a>
             <a class="loc2" href="https://jeandelavarende.arsene76.fr" target="_blank">Collège Jean de la Varende</a>
